# oxlitica-backend

./: .gitignore  PROJECT_CONTEXT.md  README.md  pyproject.toml  render.yaml
data_contracts/: oncology_canonical_contract.json
docs/: oxler_risk_agent_end_to_end.md  oxlitica_backend_robustness_plan.md
examples/: oncology_eps_request.json  oncology_raw_source.csv  oncology_sample_cohort.csv  oncology_source_mapping.json
examples/general_analytics/: churn_risk_request.json  churn_risk_sample.csv  churn_risk_sample.xlsx
schemas/: oncology_cohort_schema.json  oncology_mapping_schema.json  oncology_request_schema.json
src/oxler_risk_agent/: __init__.py  agent.py  api_main.py  case_memory.py  cli.py  context_builder.py  contracts.py  general_analytics.py  general_analytics_cli.py  handoff_engine.py  intent_router.py  models.py  oncology_entry_flow.py  oncology_financial_impact.py  oncology_ingestion.py  oncology_mapping.py  oncology_pipeline.py  openrouter.py  orchestration.py  pipeline_factory.py  subprocesses.py  tool_registry.py
src/oxler_risk_agent/api/: app.py
tests/: test_risk_agent.py
