[project]
name = "oxlitica-backend"
version = "0.1.0"
description = "Backend ejecutable de Oxlitica para gestion inteligente del riesgo, cohortes y modelacion analitica aplicada en salud."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "OxLER + Codex" }
]
dependencies = [
  "pandas>=2.2,<3",
  "fastapi>=0.115,<1",
  "uvicorn>=0.30,<1",
  "scikit-learn>=1.5,<2",
  "openpyxl>=3.1,<4"
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
